# mcpixel-plugin

./: .gitignore  build.gradle.kts  contributing.md  gradle.properties  justfile  settings.gradle.kts
.github/workflows/: build.yml
ffi/: Cargo.toml  build.rs
ffi/src/: 1.21.11  config.rs  lib.rs
src/main/java/dev/newty/mcpixel/: McPixel.java  NativeLoader.java  PixelArt.java  PixelCommand.java  Plugin.java  UrlParser.java
src/main/java/dev/newty/mcpixel/ffi/: BlockPair.java  Configuration.java  McPixel.java  NativeLoader.java  ResolvedBlock.java  RuntimeHelper.java  Texture.java  _CRT_DOUBLE.java  _CRT_FLOAT.java  _CoreCrtNonSecureSearchSortCompareFunction.java  _CoreCrtSecureSearchSortCompareFunction.java  _LDBL12.java  _LDOUBLE.java  _LONGDOUBLE.java  _Mbstatet.java  __crt_locale_data_public.java  __crt_locale_pointers.java  _div_t.java  _invalid_parameter_handler.java  _ldiv_t.java  _lldiv_t.java  _onexit_t.java  _purecall_handler.java  at_quick_exit$x0.java  atexit$x0.java  constants$0.java  constants$1.java  constants$10.java  constants$11.java  constants$12.java  constants$13.java  constants$14.java  constants$15.java  constants$16.java  constants$17.java  constants$18.java  constants$19.java  constants$2.java  constants$20.java  constants$21.java  (+50 more)
src/main/java/dev/newty/mcpixel/parsers/: UrlParser.java
src/main/resources/: plugin.yml
