[package]
name = "ffi"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22.4"

[dependencies.mcpixel]
git = "https://github.com/isitreallyalive/mcpixel.git"
default-features = false
features = ["recommended"]

[build-dependencies]
hex = "0.4.3"
md5 = "0.8.0"
ureq = "3.3.0"
